# diabetes-inequalities

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
README_files/: docs.md  sourceURL.yaml
analysis/: 0.processDC.md  1.mergePublicData.md  2.analyseDC.md  deprivation-by-age.md  esneft_example.md  milestone4.md
analysis/procesDC/: 1.recentReferalls.md  aggregateAnalysis.md
data/: ethnicity-lsoa.parquet  gp-practices.parquet  gp-registrations.parquet  gp-staff.parquet  gp-summary.parquet  imd-statistics.parquet  land-area-lsoa.parquet  lsoa-esneft.json  lsoa-name.json  qof.parquet
development/0.getLSOAlookup/: 0.getLSOAlookup.md
development/0.getOSMmap/: filterOSM.sh
development/0.getPrescriptions/: 0.downloadPrescription.sh
development/1.getDeprivationIndices/: 0.getDeprivationIndices.md
development/1.getPopulationStats/: 0.getPopulationStats.md
development/1.getStandardArea/: 0.getStandardArea.md
development/2.getGPdata/: 0.getGPregistration.md  1.getGPstaff.md  2.getGPpractices.md
development/3.mapGPaccesibility/: 0.mapGPaccesibility.md
development/4.processAandE/: 0.processAandE.md
development/4.processIP/: 1.exploratoryPermutation.md
development/4.processOP/: 1.exploreOP.md
development/5.processPrimary/: 0.processPrimary.md
src/: utilities.py
src/0.getPostcodeLatLong/: 0.getPostcodeLatLong.md
src/0.getPrescriptions/: 1.processPrescription.md
src/1.getLSOAmaps/: 0.getLSOAmaps.md
src/1.getPopulationStats/: 0.getPopulationStats.md
src/4.processIP/: 0.processIP.md  (+6 more)
(+30 files in other folders)
